--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,18 @@ font-family: "Philosopher";
 src: url("font/Philosopher-Regular.ttf");
 }
 
+.planetes {
+  border: 2px solid #3b3b3b;
+  width: 35%;
+}
+
+.planetes p {
+  margin-left: 38%;
+}
+.planetes img {
+  margin-left: 21%;
+}
+
 #adminPlanetes, #adminPlanetes p, #adminClients, #adminClients p {
   display: inline-block;
   position: relative;
@@ -59,7 +71,7 @@ src: url("font/Philosopher-Regular.ttf");
       height: 50px;
       display: inline-block;
       width: 120px;
-      background-color: #7192bb;
+      background-color: #5f5f5f;
       border: 1px solid #cbdcc9;
       padding-left: 5px;
       padding-right: 5px;
@@ -142,15 +154,6 @@ src: url("font/Philosopher-Regular.ttf");
     font-weight: bold;
   }
 
-  #donne {
-    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
-  color:transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  }
-
-
 
 article img, form {
         width: 100%;
@@ -160,10 +163,11 @@ article img, form {
 
 /* Regles du body */
 body, html{
-  background-color: #afbfd3;
+  background-color: black;
   font-family: "Philosopher";
   font-size: 20px;
     height: 99%;
+    color: white;
 }
 
 body {
@@ -205,7 +209,7 @@ a:not(.lienMenu):not(.imgfooter):hover {
 }
 
 input {
-    border: 2px solid #7192bb;
+    border: 2px solid #5f5f5f;
    border-radius: 0px; 
 
 }
