--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,6 @@ font-family: "Philosopher";
 src: url("font/Philosopher-Regular.ttf");
 }
 
-/*#banner {
-  position: fixed;
-  width: 800px;
-  margin-left: 200px;
-  height: 100px;
-}*/
 
 .planetes {
   border: 0.05em solid grey;
@@ -87,7 +81,7 @@ src: url("font/Philosopher-Regular.ttf");
       display: inline-block;
       width: 120px;
       /*background-color: #5f5f5f;*/
-      /*border: 0.05em solid grey;*/
+      border: 0.05em solid grey;
       padding-left: 5px;
       padding-right: 5px;
       border-radius: 7px;
@@ -108,17 +102,6 @@ src: url("font/Philosopher-Regular.ttf");
 
 
     }
-
-  
-
-    #menu > li:hover{
-      background-color: #grey;
-        transition: background-color 1s linear;
-        
-    }
-
-    
-
 
 
     #menu > li > ul {
@@ -162,7 +145,7 @@ src: url("font/Philosopher-Regular.ttf");
       color: #c2f6f7;
       transition: color 500ms;
     }
-}   
+   
     
   .bold {
     font-weight: bold;
@@ -204,8 +187,6 @@ label {
 }
 
 
-
-
 a {
   text-decoration: none;
   color: white;
@@ -214,15 +195,8 @@ a {
 a:not(.lienMenu) {
   text-decoration: none;
   color: #b1b2f9;
- 
-
-
 }
 
-a:not(.lienMenu):not(.imgfooter):hover {
-  
-
-}
 
 input {
     border: 0.05em solid grey;
